--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "bower": "^1.7.9",
     "express": "^4.14.0",
-    "express-jwt": "^3.4.0"
+    "express-jwt": "^3.4.0",
+    "http-proxy": "^1.14.0"
   },
   "devDependencies": {},
   "scripts": {
