--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "iQueue Project README",
   "main": "index.js",
   "dependencies": {
+    "body-parser": "^1.15.2",
     "bower": "^1.7.9",
     "express": "^4.14.0",
     "express-jwt": "^3.4.0",
